# competitive-intel

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: watchlist.yaml
docker/: docker-compose.snippet.yml
src/competitive_intel/: __init__.py  alerter.py  classifier.py  lane_impact.py  main.py  scanner.py  settings.py  signal_log.py  sources.py  venues.py  watchlist.py
tests/: conftest.py  test_alerter.py  test_classifier.py  test_lane_impact.py  test_scanner.py  test_signal_log.py  test_sources.py  test_venues.py  test_watchlist.py
