[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "competitive-intel"
version = "0.2.0"
description = "Continuous competitive intelligence scanner — classifies governance/news signals (DISPLACE/UNLOCK/SUBSTITUTE/REGIME) against per-build watchlists and alerts via Telegram."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "feedparser>=6.0",
    "redis[hiredis]>=5.0",
    "pyyaml>=6.0",
    "tenacity>=8.3",
    "structlog>=24.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
# Several runtime deps (feedparser, yaml) ship without type stubs / py.typed.
# Ignoring missing imports keeps the type-check focused on our own code.
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
